traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:14: error: ';' expected but 'if' found.
    } if (getX() == 0) {
      ^